# budgie

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deny.toml  test.rest
.github/workflows/: pipeline.yml
src/: email.rs  lettre.rs  lib.rs  main.rs  server.rs
