[package]
name = "budgie"
version = "0.1.2"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
license = "BSD-2-Clause-Patent"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
axum = { version = "0.5.6", features = ["http2"] }
clap = { version = "3.1.18", features = ["derive", "env"] }
http = "0.2.8"
hyper = "0.14.19"
lettre = { version = "0.10.0-rc.7", features = ["tokio1-native-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.0", features = ["full"] }
tower-http = { version = "0.3.3", features = ["trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
